--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_KEY= 9a07fd6e72eba80e9494d4624edf23f9
-API_URL= https://api.openweathermap.org/data/2.5/
+VITE_API_KEY= 9a07fd6e72eba80e9494d4624edf23f9
+VITE_API_URL= https://api.openweathermap.org/data/2.5/weather
